--- a/index.htm
+++ b/index.htm
@@ -394,7 +394,18 @@
         <div class="hero-content">
             <h1>Soen Games</h1>
             <p>혁신적인 게임으로 새로운 세계를 창조합니다</p>
-            <a href="#games" class="cta-button">게임 둘러보기</a>
+            <div style="display: flex; gap: 1rem; justify-content: center; align-items: center; flex-wrap: wrap;">
+                <a href="#games" class="cta-button">게임 둘러보기</a>
+                <a href="https://www.youtube.com/@soengames" target="_blank" class="cta-button" 
+                   style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 1rem 2.5rem; background: rgba(255, 255, 255, 0.15); color: white; text-decoration: none; border-radius: 50px; font-weight: bold; transition: all 0.3s ease; backdrop-filter: blur(10px); border: 2px solid rgba(255, 255, 255, 0.2);"
+                   onmouseover="this.style.background='rgba(255, 255, 255, 0.25)'; this.style.transform='translateY(-2px)'"
+                   onmouseout="this.style.background='rgba(255, 255, 255, 0.15)'; this.style.transform='translateY(0)'">
+                   <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                       <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                   </svg>
+                   YouTube
+                </a>
+            </div>
         </div>
     </section>
 
@@ -417,7 +428,7 @@
             <div class="game-card">
                 <div class="game-image">
                     <img src="com.soen.srbeta2.png" 
-                         alt="퇴근길 렐리">
+                         alt="퇴근길 렐리 아이콘">
                 </div>
                 <div class="game-info">
                     <h3>퇴근길 렐리</h3>
@@ -466,8 +477,13 @@
                 <p>dgiim@soengames.com</p>
             </div>
             <div class="contact-item">
-                <h3>📍 주소</h3>
-                <p>서울특별시 종로구 인사동길 7, 2층<br>(인사동,인사동코트)</p>
+                <h3>
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="#FF0000" style="vertical-align: middle; margin-right: 0.5rem;">
+                        <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                    </svg>
+                    YouTube
+                </h3>
+                <p><a href="https://www.youtube.com/@soengames" target="_blank" style="color: #4ecdc4; text-decoration: none;">@soengames</a></p>
             </div>
         </div>
     </section>
