Change title to 'Soen Games'

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soen Games - 혁신적인 게임 개발사</title>
+    <title>Soen Games</title>
     <style>
         * {
             margin: 0;
