--- a/index.htm
+++ b/index.htm
@@ -393,7 +393,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Soen Games</h1>
-            <p>혁신적인 게임으로 새로운 세계를 창조합니다</p>
+            <p>소은광역시에 어서 오세요!</p>
             <div style="display: flex; gap: 1rem; justify-content: center; align-items: center; flex-wrap: wrap;">
                 <a href="#games" class="cta-button">게임 둘러보기</a>
                 <a href="https://www.youtube.com/@soengames" target="_blank" class="cta-button" 
