--- a/index.htm
+++ b/index.htm
@@ -468,9 +468,27 @@
         </div>
     </section>
 
+    <section id="team" class="team">
+        <h2 class="section-title">우리 팀</h2>
+        <div class="team-content">
+            <div class="team-image">
+                <img src="studio.jpg" alt="Soen Games Studio">
+            </div>
+            <div class="team-text">
+                <h3>저희 회사에 놀러오세요!</h3>
+                <p>
+                    프로그래머들과 디자이너들이 밤낮없이 열정을 쏟아 게임을 만들고 있습니다.<br><br>
+                    당신이 둘 중 하나에 해당한다면?<br>
+                    👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
+                    (경력 불문, 열정 환영!)
+                </p>
+            </div>
+        </div>
+    </section>
+    
+
     <section id="contact" class="contact">
         <h2 class="section-title">연락처</h2>
-        <p>함께 게임의 미래를 만들어가고 싶으시다면 언제든 연락주세요!</p>
         <div class="contact-info">
             <div class="contact-item">
                 <h3>📧 이메일</h3>
