--- a/index.htm
+++ b/index.htm
@@ -295,6 +295,51 @@
             border-radius: 8px;
         }
 
+        /* Team Section */
+        .team {
+            background: #0a0a0a;
+            color: #fff;
+            padding: 5rem 2rem;
+        }
+
+        .team-content {
+            max-width: 1000px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 2rem;
+        }
+
+        .team-image {
+            width: 100%;
+            max-width: 600px;
+        }
+
+        .team-image img {
+            width: 100%;
+            height: auto;
+            border-radius: 20px;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        }
+
+        .team-text {
+            text-align: center;
+            max-width: 800px;
+        }
+
+        .team-text h3 {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            color: #4ecdc4;
+        }
+
+        .team-text p {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            color: #fff;
+        }
+
         /* Contact Section */
         .contact {
             background: #111;
@@ -346,6 +391,14 @@
 
             .section-title {
                 font-size: 2rem;
+            }
+
+            .team-text h3 {
+                font-size: 1.5rem;
+            }
+
+            .team-text p {
+                font-size: 1rem;
             }
         }
 
