--- a/index.htm
+++ b/index.htm
@@ -533,7 +533,7 @@
                     프로그래머들과 디자이너들이 밤낮없이 열정을 쏟아 게임을 만들고 있습니다.<br><br>
                     당신이 둘 중 하나에 해당한다면?<br>
                     👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
-                    (경력 불문, 열정 환영!)
+                    (경력을 몹시 따짐!)
                 </p>
             </div>
         </div>
