--- a/index.htm
+++ b/index.htm
@@ -530,10 +530,9 @@
             <div class="team-text">
                 <h3>저희 회사에 놀러오세요!</h3>
                 <p>
-                    프로그래머들과 디자이너들이 밤낮없이 열정을 쏟아 게임을 만들고 있습니다.<br><br>
-                    당신이 둘 중 하나에 해당한다면?<br>
-                    👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
-                    (경력을 몹시 따짐!)
+                    프로그래머 2명, 디자이너 2명의 4인 팀입니다. 모두 경력자들이고 밤낮없이 게임 만들기에 집중하고 있습니다. <br><br>
+                    Google Indie Games Festival Top 3과 수십만 다운로드도 열심히 만들다 보니 따라온 결과죠.<br>
+                    당신이 프로그래머나 디자이너라면? 👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
                 </p>
             </div>
         </div>
