--- a/index.htm
+++ b/index.htm
@@ -528,10 +528,10 @@
                 <img src="studio.jpg" alt="Soen Games Studio">
             </div>
             <div class="team-text">
-                <h3>저희 회사에 놀러오세요!</h3>
+                <h3>2x2</h3>
                 <p>
-                    프로그래머 둘과, 디자이너 둘이 밤낮없이 게임 만들기에 집중하고 있습니다. <br><br>
-                    Google Indie Games Festival Top 3과 수십만 다운로드도 열심히 만들다 보니 따라온 결과죠.<br>
+                    2명의 프로그래머와 2명의 디자이너가 밤낮없이 만들고 있습니다. 집중하고 있습니다. <br><br>
+                    Google Indie Games Festival Top 3과 수십만 다운로드도 전부 밤에 이루어졌죠.<br>
                     당신이 프로그래머나 디자이너라면? 👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
                 </p>
             </div>
