Fix line break in team text section
Removed extra line break in team description.

--- a/index.htm
+++ b/index.htm
@@ -530,7 +530,7 @@
             <div class="team-text">
                 <h3>2x2</h3>
                 <p>
-                    2명의 프로그래머와 2명의 디자이너가 밤낮없이 만들고 있습니다. 집중하고 있습니다. <br><br>
+                    2명의 프로그래머와 2명의 디자이너가 밤낮없이 만들고 있습니다. 집중하고 있습니다. <br>
                     Google Indie Games Festival Top 3과 수십만 다운로드도 전부 한밤중에 빌드됐었죠😉<br>
                     당신이 프로그래머나 디자이너라면? 👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
                 </p>
