--- a/index.htm
+++ b/index.htm
@@ -530,10 +530,22 @@
             <div class="team-text">
                 <h3>2x2</h3>
                 <p>
-                    2명의 프로그래머와 2명의 디자이너가 밤낮없이 만들고 있습니다.<br>
-                    Google Indie Games Festival Top 3과 수십만 다운로드도 전부 한밤중에 빌드됐었죠😉<br>
-                    당신이 프로그래머나 디자이너라면? 👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
+                    프로그래머 2명, 디자이너 2명의 4인 팀입니다. 모두 경력자들이고 밤낮없이 게임 만들기에 집중하고 있습니다. Google Indie Games Festival Top 3과 수십만 다운로드도 열심히 만들다 보니 따라온 결과죠. 프로그래머나 디자이너시라면 dgiimappservice@gmail.com으로 연락주세요!
                 </p>
+                <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 2rem; flex-wrap: wrap;">
+                    <a href="https://www.youtube.com/@soengames/streams" target="_blank" 
+                       style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.8rem 1.5rem; background: rgba(255, 107, 107, 0.1); color: #ff6b6b; text-decoration: none; border-radius: 25px; font-weight: bold; transition: all 0.3s ease; border: 2px solid #ff6b6b;"
+                       onmouseover="this.style.background='rgba(255, 107, 107, 0.2)'; this.style.transform='translateY(-2px)'"
+                       onmouseout="this.style.background='rgba(255, 107, 107, 0.1)'; this.style.transform='translateY(0)'">
+                       🎮 지금 이 시각 뭘하고 있나?
+                    </a>
+                    <a href="https://discord.com/invite/JafXk9fGSE" target="_blank"
+                       style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.8rem 1.5rem; background: rgba(78, 205, 196, 0.1); color: #4ecdc4; text-decoration: none; border-radius: 25px; font-weight: bold; transition: all 0.3s ease; border: 2px solid #4ecdc4;"
+                       onmouseover="this.style.background='rgba(78, 205, 196, 0.2)'; this.style.transform='translateY(-2px)'"
+                       onmouseout="this.style.background='rgba(78, 205, 196, 0.1)'; this.style.transform='translateY(0)'">
+                       💬 팀에 바로 의견을 주려면
+                    </a>
+                </div>
             </div>
         </div>
     </section>
