--- a/index.htm
+++ b/index.htm
@@ -438,6 +438,7 @@
                 <li><a href="#home">홈</a></li>
                 <li><a href="#about">회사소개</a></li>
                 <li><a href="#games">게임</a></li>
+                <li><a href="#team">팀</a></li>
                 <li><a href="#contact">연락처</a></li>
             </ul>
         </nav>
@@ -530,7 +531,9 @@
             <div class="team-text">
                 <h3>2x2</h3>
                 <p>
-                    프로그래머 2명, 디자이너 2명의 4인 팀입니다. 모두 경력자들이고 밤낮없이 게임 만들기에 집중하고 있습니다. Google Indie Games Festival Top 3과 수십만 다운로드도 열심히 만들다 보니 따라온 결과죠. 프로그래머나 디자이너시라면 dgiimappservice@gmail.com으로 연락주세요!
+                    2명의 프로그래머와 2명의 디자이너가 밤낮없이 만들고 있습니다.<br>
+                    Google Indie Games Festival Top 3과 수십만 다운로드도 전부 한밤중에 빌드됐었죠😉<br>
+                    당신이 프로그래머나 디자이너라면? 👉 <strong>dgiimappservice@gmail.com</strong> 으로 지원해주세요!<br>
                 </p>
                 <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 2rem; flex-wrap: wrap;">
                     <a href="https://www.youtube.com/@soengames/streams" target="_blank" 
@@ -590,6 +593,4 @@
             // 자동차 및 레이싱 관련 아이콘 배열
             const vehicleIcons = [
                 '🏎️', '🚗', '🚙', '🚘', '🚔', '🚕', '🚐', '🚛', '🏍️', '🛵',
-                '🚲', '🛴', '🚁', '✈️', '🚀', '🛸', '🚤', '⛵', '🚢', '🚂',
-                '🚆', '🚈', '🚝', '🚞', '🚋', '🚃', '🏁', '🚦', '⛽', '🛣️',
-                '🏆', '🥇', '🎯', '
+                '🚲', '🛴
