--- a/index.htm
+++ b/index.htm
@@ -553,11 +553,9 @@
         <h2 class="section-title">회사 소개</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Soen Games는 플레이어들에게 잊을 수 없는 게임 경험을 제공하는 것을 목표로 하는 혁신적인 게임 개발사입니다.</p>
+                <p>소은광역시에 어서오세요!</p>
                 <br>
-                <p>우리는 창의적인 스토리텔링, 최첨단 기술, 그리고 독창적인 게임플레이를 통해 게임 산업의 새로운 표준을 제시하고 있습니다.</p>
-                <br>
-                <p>각각의 프로젝트에서 열정과 전문성을 바탕으로, 전 세계 게이머들이 사랑할 수 있는 게임을 만들어 나가고 있습니다.</p>
+                <p>소은게임은 전 세계 게이머들이 사랑할 수 있는 게임을 만들어 나가고 있습니다.</p>
             </div>
         </div>
     </section>
@@ -571,7 +569,7 @@
                          alt="퇴근길 렐리 아이콘">
                 </div>
                 <div class="game-info">
-                    <h3>퇴근길 렐리</h3>
+                    <h3>퇴근길랠리</h3>
                     <p>구글인디게임페스티벌 Top 3 선정작!<br>
                     한국 최고의 모범도시 소은광역시!<br>
                     오늘 저녁에도 시민들이 열광하는 사설 랠리가 개최됩니다.</p>
