Change welcome message in index.htm
Updated welcome message in Korean.

--- a/index.htm
+++ b/index.htm
@@ -533,7 +533,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Soen Games</h1>
-            <p>소은광역시에 어서 오세요!</p>
+            <p>소은광역시에 잘 오셨습니다</p>
             <div style="display: flex; gap: 1rem; justify-content: center; align-items: center; flex-wrap: wrap;">
                 <a href="#games" class="cta-button">게임 둘러보기</a>
                 <a href="https://www.youtube.com/@soengames" target="_blank" class="cta-button" 
